# AI-powered-customer-assistant

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  start.sh
Data/: Booking.txt  Service_process.txt  Specifications.json  Test_drive.txt  mg_faq.json  mg_service.json  mg_support.json
app/: llm_client.py  load_document.py  response.py  server.py  vector_store.py
